Fixed text overflow.

--- a/css/main.css
+++ b/css/main.css
@@ -26,14 +26,17 @@ html {
 
 .banner {
   position: relative;
-  width: 100%
+  width: 100%;
+  max-height: 24rem;
 }
 
 .banner-content {
   position: absolute;
   width: 100%;
   top: 200px;
+  bottom: 0;
   left: 0;
   text-align: center;
   color: white;
+  overflow: hidden;
 }
